@@ -32,6 +32,8 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
  - Timestamps are now preserved in the /lastlog command. Also fixed a
    bug where the separator line disappeared during /lastlog.
  - Added a Browse button to the DCC download folder setting.
+ - Made the setup window a little neater and Gnome-like.
+ - Improved the notify window a little.
  - 
  - Perl:
   * Turn on utf8 flag for things that should have it on.
